--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pyrogram
 TgCrypto
 pyromod
 # --- For-Database ------------ #
-pymongo==4.7.1
+pymongo
 dnspython
 # --- For-Web-Response ------- #
 aiohttp
